--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -59,6 +59,6 @@ Astro.props = {
 @use "public/styles/grids" as grids;
 
 .card-grid {
-  @include grids.grid;
+  @include grids.flexGrid(3);
 }
 </style>
