--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -1,19 +1,19 @@
+@use "public/styles/variables" as *;
 @use "public/styles/helpers" as helpers;
 
 .card {
   min-height: 280px;
   width: 100%;
-  height: 100%;
   overflow: hidden;
   position: relative;
 
   display: flex;
   flex-direction: column;
 
-  border: 1px solid var(--color-very-light-gray);
-  border-radius: 2px;
-  background: var(--color-white);
-  box-shadow: var(--color-purple) 4px 4px 0px 0px;
+  border: 0;
+  border-radius: $gap * 2;
+  // background: var(--color-white);
+  // box-shadow: var(--color-purple) 4px 4px 0px 0px;
 
   text-decoration: none;
 }
@@ -60,7 +60,7 @@
 }
 
 .description {
-  @include helpers.text-truncate(3, 3);
+  @include helpers.text-truncate(2, 2);
 
   margin: 0;
 }
