--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
-import BaseLayout from '../layouts/base.astro';
-import Card from '../components/Card/Card';
 
 import { Markdown } from 'astro/components';
+import BaseLayout from '../layouts/base.astro';
 
+import Work from './work/work.tsx';
 import { getAllProjects } from './work';
+
+import Card from '../components/Card/Card.tsx';
+
+import { StaticRouter as Router, Route} from 'react-router-dom'
 
 let content = {
     title: 'Hello World',
