--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -1,27 +1,56 @@
 @use "public/styles/variables" as *;
 @use "public/styles/helpers" as helpers;
 
+$cardHeight: 420px;
+
 .card {
   min-height: 280px;
+  max-height: $cardHeight;
+
   width: 100%;
-  overflow: hidden;
-  position: relative;
 
   display: flex;
   flex-direction: column;
 
   border: 0;
-  border-radius: $gap * 2;
   // background: var(--color-white);
   // box-shadow: var(--color-purple) 4px 4px 0px 0px;
 
   text-decoration: none;
 }
 
+.content-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: block;
+  pointer-events: none;
+
+  &:global(.expanded) {
+    top: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    z-index: 1;
+    overflow: hidden;
+  }
+}
+
+.content {
+  pointer-events: auto;
+  position: relative;
+  border-radius: $gap * 4;
+  background: #1c1c1e;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
 .avatar {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: $cardHeight;
 
   background: radial-gradient(
     46.28% 66.31% at 66.95% 58.35%,
@@ -38,19 +67,21 @@
   }
 }
 
-.content {
+.title-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
   padding: 1em;
-  min-height: 40px;
-  height: 100%;
-  margin-top: auto;
   overflow: hidden;
 
-  z-index: 0;
   color: white;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+}
+:global(.expanded) .title-container {
+  top: 0;
+  justify-content: flex-start;
 }
 
 .title {
