--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -3,6 +3,8 @@
 @use "./helpers";
 
 @import url("https://rsms.me/inter/inter.css");
+// @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap");
 
 * {
   box-sizing: border-box;
@@ -42,6 +44,80 @@ h4 {
   font-weight: 900;
 }
 
+/* Paragraphs and codes */
+p {
+  padding: 0;
+  margin: 0 0 1.5rem 0;
+  line-height: 1.625rem;
+
+  orphans: 2;
+  widows: 2;
+}
+
+pre {
+  padding: calc(4 * var(--gap));
+  border-radius: $gap;
+  margin: 0 0 1.5rem 0;
+  background-color: var(--color-lightblue);
+  overflow: auto;
+}
+
+code,
+pre,
+pre code {
+  font-weight: 300;
+  text-shadow: none;
+  font-family: var(--font-family-code);
+  font-size: 100%;
+  overflow: hidden;
+}
+
+blockquote {
+  width: 100%;
+  margin: 0 0 1.5rem 0;
+  padding-left: calc(2 * var(--gap));
+  font-size: 1rem;
+  border-left: 4px solid var(--color-lightblue);
+}
+
+table {
+  margin-bottom: 1.5rem;
+  border-radius: $gap * 2;
+  border-spacing: 0px;
+  border: 1px solid var(--color-lightgray);
+  border-top: 0px;
+  overflow: hidden;
+
+  & thead {
+    background-color: var(--color-fg);
+    color: var(--color-bg);
+    font-weight: bold;
+    font-family: var(--font-family-heading);
+    font-size: 1.25em;
+  }
+  & tr:not(:last-child) {
+    & td {
+      border-bottom: 1px solid var(--color-lightgray);
+    }
+  }
+
+  & th,
+  & td {
+    padding: calc(4 * var(--gap));
+
+    &:not(:last-child) {
+      border-right: 1px solid var(--color-lightgray);
+    }
+  }
+}
+
+table tr td:last-child {
+  border-right-width: 1px;
+}
+table tr:last-child td {
+  border-bottom-width: 1px;
+}
+
 /** Reset margins/paddings */
 .m0 {
   margin: 0;
@@ -69,6 +145,7 @@ h4 {
 /** Global wrapper */
 .container {
   max-width: 1440px;
+  width: 100%;
   flex: 1 1 100%;
   padding: $gap * 4 $gap * 4;
 }
