--- a/web/public/styles/_custom-properties.scss
+++ b/web/public/styles/_custom-properties.scss
@@ -11,21 +11,25 @@
 
   --font-family-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  --font-family-code: "IBM Plex Mono", -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  --font-family-code: "Fira Code", "IBM Plex Mono", -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
   --color-black: #202123;
   --color-dark-gray: #32373e;
   --color-gray: #697a90;
-  --color-light-gray: #b4bcc7;
-  --color-very-light-gray: #e7ebed;
+  --color-lightgray: #b4bcc7;
+  --color-verylightgray: #e7ebed;
   --color-white: #fff;
-  --color-accent: #156dff;
+  --color-lightblue: rgb(140 165 230 / 17%);
   --color-purple: rgb(210, 210, 249);
 
+  --color-bg: var(--color-white);
+  --color-fg: var(--color-black);
+  --color-accent: #156dff;
+
   /* Margin/padding units */
-  --gap: $gap;
+  --gap: #{$gap};
 
   /* Typography */
   --unit: 18;
