--- a/web/src/components/Post/Post.astro
+++ b/web/src/components/Post/Post.astro
@@ -19,9 +19,9 @@ console.log(Astro.props);
     */
   :global(p > code),
   :global(li > code) {
-    font-size: 85%;
+    font-size: 100%;
     padding: var(--gap);
-    background-color: var(--color-gray);
+    background-color: var(--color-lightgray);
     border-radius: 3px;
   }
 
