--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -44,6 +44,17 @@ h4 {
   font-weight: 900;
 }
 
+/** lists */
+ol li::marker {
+  font-size: 1.2rem;
+}
+ul li {
+  &::marker {
+    color: var(--color-lightgray);
+    font-size: 1.2rem;
+  }
+}
+
 /* Paragraphs and codes */
 p {
   padding: 0;
@@ -65,10 +76,8 @@ pre {
 code,
 pre,
 pre code {
-  font-weight: 300;
   text-shadow: none;
   font-family: var(--font-family-code);
-  font-size: 100%;
   overflow: hidden;
 }
 
@@ -82,10 +91,9 @@ blockquote {
 
 table {
   margin-bottom: 1.5rem;
-  border-radius: $gap * 2;
   border-spacing: 0px;
-  border: 1px solid var(--color-lightgray);
   border-top: 0px;
+  font-size: var(--font-base-size);
   overflow: hidden;
 
   & thead {
@@ -93,9 +101,14 @@ table {
     color: var(--color-bg);
     font-weight: bold;
     font-family: var(--font-family-heading);
-    font-size: 1.25em;
+    font-size: 1.2rem;
   }
   & tr:not(:last-child) {
+    & td {
+      border-bottom: 1px solid var(--color-lightgray);
+    }
+  }
+  & tr:last-child {
     & td {
       border-bottom: 1px solid var(--color-lightgray);
     }
@@ -103,19 +116,12 @@ table {
 
   & th,
   & td {
-    padding: calc(4 * var(--gap));
-
-    &:not(:last-child) {
-      border-right: 1px solid var(--color-lightgray);
+    padding: calc(2 * var(--gap));
+    border-right: 1px solid var(--color-lightgray);
+    &:first-of-type {
+      border-left: 1px solid var(--color-lightgray);
     }
   }
-}
-
-table tr td:last-child {
-  border-right-width: 1px;
-}
-table tr:last-child td {
-  border-bottom-width: 1px;
 }
 
 /** Reset margins/paddings */
