--- a/web/public/styles/_custom-properties.scss
+++ b/web/public/styles/_custom-properties.scss
@@ -1,4 +1,5 @@
 @use "variables" as *;
+@use "sass:map";
 
 /**
  * Custom css properties (available at runtime only)
@@ -10,23 +11,20 @@
   }
 
   --font-family-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  --font-family-code: "Fira Code", "IBM Plex Mono", -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    Helvetica Neue, Ubuntu, sans-serif;
+  --font-family-code: Menlo, Consolas, monospace;
 
-  --color-black: #202123;
-  --color-dark-gray: #32373e;
-  --color-gray: #697a90;
-  --color-lightgray: #b4bcc7;
-  --color-verylightgray: #e7ebed;
-  --color-white: #fff;
-  --color-lightblue: rgb(140 165 230 / 17%);
-  --color-purple: rgb(210, 210, 249);
+  --color-black: #{map.get($colors, "black")};
+  --color-white: #{map.get($colors, "white")};
+  --color-gray: #{map.get($colors, "gray")};
+  --color-lightgray: #{map.get($colors, "lightgray")};
+  --color-blue: #{map.get($colors, "blue")};
+  --color-lightblue: #{map.get($colors, "lightblue")};
+  --color-purple: #{map.get($colors, "lightpurple")};
 
   --color-bg: var(--color-white);
   --color-fg: var(--color-black);
-  --color-accent: #156dff;
+  --color-accent: var(--color-blue);
 
   /* Margin/padding units */
   --gap: #{$gap};
@@ -38,7 +36,7 @@
   --font-small-size: calc(14 / var(--unit) * 1rem); /* 14px */
   --font-small-line-height: calc(21 / 14); /* 21px */
 
-  --font-base-size: 16px; /* 16px */
+  --font-base-size: 14px; /* 16px */
   --font-base-line-height: calc(24 / var(--unit)); /* 24px */
   --font-large-size: calc(18 / var(--unit) * 1rem); /* 18px */
   --font-large-line-height: calc(27 / 18); /* 27px */
