--- a/web/src/pages/Styleguide.astro
+++ b/web/src/pages/Styleguide.astro
@@ -103,20 +103,19 @@ Now a nested list:
 
 2.  Boil some water.
 
-3.  Dump everything in the pot and follow
-    this algorithm:
+3.  Dump everything in the pot and follow this algorithm:
 
-        find wooden spoon
-        uncover pot
-        stir
-        cover pot
-        balance wooden spoon precariously on pot handle
-        wait 10 minutes
-        goto first step (or shut off burner when done)
+  * find wooden spoon
+  * uncover pot
+  * stir
+  * cover pot
+  * balance wooden spoon precariously on pot handle
+  * wait 10 minutes
+  * goto first step (or shut off burner when done)
 
-    Do not bump wooden spoon or it will fall.
+> > >     Do not bump wooden spoon or it will fall.
 
-4.  Please say yes
+4.  Turn off the heat
 
 ## Todo Input
 
