--- a/web/src/components/Post/Post.astro
+++ b/web/src/components/Post/Post.astro
@@ -21,7 +21,7 @@ console.log(Astro.props);
   :global(li > code) {
     font-size: 100%;
     padding: var(--gap);
-    background-color: var(--color-lightgray);
+    background-color: var(--surface4);
     border-radius: 3px;
   }
 
