--- a/web/public/styles/_custom-properties.scss
+++ b/web/public/styles/_custom-properties.scss
@@ -1,52 +1,25 @@
-@use "variables" as *;
 @use "sass:map";
+@use "variables" as *;
+@use "colorscheme" as colors;
 
 /**
  * Custom css properties (available at runtime only)
  */
 :root {
-  --font-family-heading: "Inter", sans-serif;
-  @supports (font-variation-settings: normal) {
-    --font-family-heading: "Inter var", sans-serif;
-  }
-
-  --font-family-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Helvetica Neue, Ubuntu, sans-serif;
-  --font-family-code: Menlo, Consolas, monospace;
-
-  --color-black: #{map.get($colors, "black")};
-  --color-white: #{map.get($colors, "white")};
-  --color-gray: #{map.get($colors, "gray")};
-  --color-lightgray: #{map.get($colors, "lightgray")};
-  --color-blue: #{map.get($colors, "blue")};
-  --color-lightblue: #{map.get($colors, "lightblue")};
-  --color-purple: #{map.get($colors, "lightpurple")};
-
-  --color-bg: var(--color-white);
-  --color-fg: var(--color-black);
-  --color-accent: var(--color-blue);
-
   /* Margin/padding units */
   --gap: #{$gap};
 
-  /* Typography */
-  --unit: 18;
-  --font-micro-size: calc(10 / var(--unit) * 1rem); /* 10px */
-  --font-micro-line-height: calc(12 / 10); /* 12px */
-  --font-small-size: calc(14 / var(--unit) * 1rem); /* 14px */
-  --font-small-line-height: calc(21 / 14); /* 21px */
-
-  --font-base-size: 14px; /* 16px */
-  --font-base-line-height: calc(24 / var(--unit)); /* 24px */
-  --font-large-size: calc(18 / var(--unit) * 1rem); /* 18px */
-  --font-large-line-height: calc(27 / 18); /* 27px */
-
-  --font-title3-size: calc(21 / var(--unit) * 1rem); /* 21px */
-  --font-title3-line-height: calc(30 / 21); /* 30px */
-  --font-title2-size: calc(24 / var(--unit) * 1rem); /* 24px */
-  --font-title2-line-height: calc(33 / 24); /* 33px */
-  --font-title1-size: calc(49 / var(--unit) * 1rem); /* 49px */
-  --font-title1-line-height: calc(57 / 49); /* 57px */
+  /** Default colorscheme is light */
+  color-scheme: light;
+  --brand: var(--brand-light);
+  --text1: var(--text1-light);
+  --text2: var(--text2-light);
+  --surface1: var(--surface1-light);
+  --surface2: var(--surface2-light);
+  --surface3: var(--surface3-light);
+  --surface4: var(--surface4-light);
+  --surface-shadow: var(--surface-shadow-light);
+  --shadow-strength: var(--shadow-strength-light);
 
   --anim-quick: 0.1s;
   --anim-default: 0.24s;
