--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -23,7 +23,7 @@
 }
 
 .footer {
-  border-top: 1px solid var(--color-very-light-gray);
+  border-top: 1px solid var(--surface4);
 
   @nest & a {
     color: inherit;
@@ -31,7 +31,7 @@
 
     @media (hover: hover) {
       @nest &:hover {
-        color: var(--color-accent);
+        color: var(--brand);
       }
     }
   }
