--- a/web/public/styles/_base.scss
+++ b/web/public/styles/_base.scss
@@ -17,6 +17,8 @@
   --brand: var(--brand-light);
   --text1: var(--text1-light);
   --text2: var(--text2-light);
+  --text1-invert: var(--text1-dark);
+  --text2-invert: var(--text1-dark);
   --surface1: var(--surface1-light);
   --surface2: var(--surface2-light);
   --surface3: var(--surface3-light);
@@ -72,10 +74,52 @@ body {
 
 /** Global wrapper */
 .container {
-  max-width: 1440px;
+  // max-width: 1440px;
   width: 100%;
   flex: 1 1 100%;
+}
+
+.pad4 {
   padding: $gap * 4 $gap * 4;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+.mb-auto {
+  margin-bottom: auto;
+}
+
+.fl-y-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/** Colorscheme */
+.text1 {
+  color: var(--text1);
+}
+.text2 {
+  color: var(--text2);
+}
+
+.surface1 {
+  background-color: var(--surface1);
+}
+.surface2 {
+  background-color: var(--surface2);
+}
+.surface3 {
+  background-color: var(--surface3);
+}
+.surface4 {
+  background-color: var(--surface4);
 }
 
 /** lists */
@@ -93,7 +137,7 @@ pre {
   padding: calc(4 * var(--gap));
   border-radius: $gap;
   margin: 0 0 1.5rem 0;
-  background-color: var(--surface4);
+  background-color: var(--surface3);
   overflow: auto;
 }
 
@@ -128,21 +172,21 @@ table {
   }
   & tr:not(:last-child) {
     & td {
-      border-bottom: 1px solid var(--surface4);
+      border-bottom: 1px solid var(--surface2);
     }
   }
   & tr:last-child {
     & td {
-      border-bottom: 1px solid var(--surface4);
+      border-bottom: 1px solid var(--surface2);
     }
   }
 
   & th,
   & td {
     padding: calc(2 * var(--gap));
-    border-right: 1px solid var(--surface4);
+    border-right: 1px solid var(--surface2);
     &:first-of-type {
-      border-left: 1px solid var(--surface4);
+      border-left: 1px solid var(--surface2);
     }
   }
 }
