--- a/web/public/styles/_colorscheme.scss
+++ b/web/public/styles/_colorscheme.scss
@@ -1,20 +1,23 @@
 * {
-  --brand-hue: 200;
-  --brand-saturation: 100%;
-  --brand-lightness: 50%;
+  --brand-hue: 15;
+  --brand-saturation: 96%;
+  --brand-lightness: 63%;
 
   /* light */
   --brand-light: hsl(
     var(--brand-hue) var(--brand-saturation) var(--brand-lightness)
   );
+  --brand2-light: hsl(153 33% 32%);
+
   --text1-light: hsl(var(--brand-hue) var(--brand-saturation) 10%);
   --text2-light: hsl(var(--brand-hue) 30% 30%);
-  --surface1-light: hsl(var(--brand-hue) 25% 90%);
-  --surface2-light: hsl(var(--brand-hue) 20% 99%);
-  --surface3-light: hsl(var(--brand-hue) 20% 92%);
-  --surface4-light: hsl(var(--brand-hue) 20% 85%);
 
-  --surface-shadow-light: hsl(var(--brand-hue) 10% 20%);
+  --surface1-light: hsl(var(--brand-hue) 20% 99%);
+  --surface2-light: hsl(var(--brand-hue) 20% 85%);
+  --surface3-light: hsl(var(--brand-hue) 50% 92%);
+  --surface4-light: hsl(var(--brand-hue) 96% 90%);
+
+  --surface-shadow-light: hsl(var(--brand-hue) var(--brand-saturation) 20%);
   --shadow-strength-light: 0.02;
 
   /* dark */
@@ -22,7 +25,7 @@
     var(--brand-hue) calc(var(--brand-saturation) / 2)
       calc(var(--brand-lightness) / 1.5)
   );
-  --text1-dark: hsl(var(--brand-hue) 15% 85%);
+  --text1-dark: hsl(var(--brand-hue) 15% 98%);
   --text2-dark: hsl(var(--brand-hue) 5% 65%);
   --surface1-dark: hsl(var(--brand-hue) 10% 10%);
   --surface2-dark: hsl(var(--brand-hue) 10% 15%);
