--- a/web/public/styles/_grids.scss
+++ b/web/public/styles/_grids.scss
@@ -4,10 +4,10 @@
 /**
  * A grid with display grid technique (not animable in 2021)
  */
-@mixin grid($columns: 3) {
+@mixin grid($columns: 3, $gap: 8px) {
   @include bp.breakpoint(small, max) {
     display: grid;
-    gap: 2rem;
+    gap: $gap;
     grid-template-columns: 1fr;
   }
 
@@ -16,7 +16,7 @@
    */
   @include bp.breakpoint(medium, min) {
     display: grid;
-    gap: 2rem;
+    gap: $gap;
     grid-template-columns: repeat($columns, 1fr);
 
     :global(.item:nth-child(1n), .span1) {
