--- a/web/src/components/Header/Header.module.scss
+++ b/web/src/components/Header/Header.module.scss
@@ -3,14 +3,12 @@
 
 .header {
   position: relative;
-  border-bottom: 1px solid var(--surface4);
   z-index: 100;
 }
 
 .wrapper {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: maxWidth;
   padding: 1em;
   display: flex;
 
@@ -20,7 +18,8 @@
 }
 
 .branding {
-  font-weight: bold;
+  font-size: var(--h5);
+  font-weight: var(--title-weight);
   flex: 1;
 
   & > a {
@@ -41,6 +40,9 @@
  * Keyboard navigation
  */
 a.skipMain {
+  color: inherit;
+  text-decoration: none;
+
   left: -999px;
   position: absolute;
   top: auto;
