--- a/web/src/components/Navigation/Navigation.module.scss
+++ b/web/src/components/Navigation/Navigation.module.scss
@@ -44,7 +44,8 @@
   }
 
   @include bp.breakpoint(medium, min) {
-    display: block;
+    display: flex;
+    align-items: center;
 
     & ul {
       list-style: none;
