--- a/web/src/layouts/base.astro
+++ b/web/src/layouts/base.astro
@@ -20,6 +20,7 @@ const content:any = Astro.props.content;
       :global(.root) {
         display: flex;
         justify-content: center;
+        height: 100%;
       }
     </style>
     <SEO module="og" ...content />
