--- a/web/public/styles/_typo.scss
+++ b/web/public/styles/_typo.scss
@@ -1,3 +1,5 @@
+@use "public/styles/breakpoints" as bp;
+
 @import url("https://rsms.me/inter/inter.css");
 // @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap");
@@ -72,10 +74,13 @@ h5 {
   font-variation-settings: "wght" var(--title-weight);
   margin: 3rem 0 1.38rem;
   line-height: var(--title-lineheight);
+
+  @include bp.breakpoint(small, max) {
+    margin: 1rem 0 1.38rem;
+  }
 }
 
 h1 {
-  margin-top: 0;
   font-size: var(--h1);
 }
 
